# CSCI-3132---OS32-Project-Summer-2015

./: CMakeLists.txt  Utilities.cpp  main.cpp
header/: Command.h  Converter.h  File.h  Motd.h  Palindrome.h  Scheduler.h  Utilities.h  calculator.h
src/: DCreate.cpp  FCreate.cpp  Fread.cpp  Fwrite.cpp  HelpMe.cpp  HelpMe.h  chper.cpp  chperAsserts.cpp
src/team1/: OS32Memory.cpp  OS32setup.cpp
src/team2/: Command.cpp  Fread.cpp  Fwrite.cpp  Scheduler.cpp  test_Scheduler.cpp
src/team3/: Login.cpp  UI.cpp
src/team4/: CSCI3132-UtilitiesMain.cpp  Converter.cpp  Motd.cpp  Palindrome.cpp  Utilities.cpp  calculator.cpp  calculator.h  encryption.cpp
